--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,9 +2,10 @@ name: before_after
 description: A flutter package which makes it easier to display the difference between two images.
 version: 2.1.0
 homepage: https://github.com/xsahil03x/before_after
+publish_to: 'none'
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
